# sumcheck-study

./: Cargo.toml  README.md
benches/: sumcheck.rs
src/: arithmetic.rs  data.rs  lib.rs  mle.rs  utils.rs
src/field/: extension.rs  goldilocks.rs  mod.rs
src/field/goldilocks/: ext.rs  mod.rs
src/gate/: mod.rs  zero.rs
src/sumcheck/: algo1.rs  gate.rs  mod.rs  test.rs  zerocheck.rs
src/transcript/: mod.rs  rust_crypto.rs
src/utils/: bitreverse.rs  mod.rs  transpose.rs
