[package]
edition = "2021"
name = "mysnark"
version = "0.1.0"

[dependencies]

num-bigint = {version = "0.4", features = ["rand"]}
num-integer = "0.1"
num-traits = "0.2"

itertools = "0.13"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = {version = "0.6", default-features = false}
rayon = "1.8"
serde = {version = "1.0", features = ["derive"]}

blake2 = "0.10.6"
digest = "0.10.3"
sha2 = "0.10.8"
sha3 = "0.10.8"

tracing = "0.1.37"
tracing-forest = {version = "0.1.6", features = ["ansi", "smallvec"]}
tracing-subscriber = {version = "0.3.17", features = ["std", "env-filter"]}

[dev-dependencies]
criterion = "0.5.1"
sysinfo = "0.33"

[features]
default = []
prover-sanity = []


